--- a/templates/home.html
+++ b/templates/home.html
@@ -115,7 +115,7 @@
                 <h4 class="mb-4">Un Sector 1 pentru toți, nu pentru profituri ilegale</h4>
 
                 <p class="lead mb-4">
-                    Nu suntem împotriva dezvoltării Sectorului 1. Ne dorim un Sector 1, București pentru toți cetățenii săi.
+                    Nu suntem împotriva dezvoltării Sectorului 1. Ne dorim un Sector 1, București pentru toți cetățenii săi. [2]
                     Nu acceptăm un sector dezvoltat ilegal, în bătaie de joc față de comunitate, urmărind doar interesele șmecherilor imobiliari.
                 </p>
 
