--- a/templates/info.html
+++ b/templates/info.html
@@ -17,7 +17,7 @@
                 <p>Garantăm anonimitate completă. Nu colectăm IP-uri, cookies sau alte date personale.</p>
 
                 <h5>GDPR</h5>
-                <p>Rapoartele pending sunt șterse automat după 30 de zile.</p>
+                <p>Raportările pending sunt șterse automat după 30 de zile.</p>
 
                 <h5>Contact</h5>
                 <p>Folosește <a href="/contact">formularul de contact anonim</a> pentru a ne contacta.</p>
