--- a/templates/report_detail.html
+++ b/templates/report_detail.html
@@ -198,7 +198,7 @@
                     <div class="comment-box">
                         <p class="mb-2">{{ comment.text }}</p>
                         <small class="text-muted">
-                            <i class="fas fa-clock"></i> {{ comment.timestamp }}
+                            <i class="fas fa-clock"></i> {{ comment.created_at }}
                         </small>
                     </div>
                     {% endfor %}
