--- a/templates/validator/dashboard.html
+++ b/templates/validator/dashboard.html
@@ -7,7 +7,7 @@
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title">Rapoarte Pending</h3>
+                <h3 class="card-title">Raportări Pending</h3>
             </div>
             <div class="card-body">
                 <table class="table table-bordered table-hover" id="reports-table">
