--- a/templates/base.html
+++ b/templates/base.html
@@ -143,7 +143,7 @@
                     <li class="nav-item">
                         <a href="/admin/reports" class="nav-link">
                             <i class="nav-icon fas fa-file-alt"></i>
-                            <p>Rapoarte</p>
+                            <p>Raportări</p>
                         </a>
                     </li>
                     <li class="nav-item">
